Hack fix for shifting page elements on loading bootstrap modal.  Twitter is working on a patch...

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -45,6 +45,11 @@ html, body {
 	font-size: 14px;
 }
 
+/* Hack fix until Twitter patches https://github.com/twbs/bootstrap/issues/9855 */
+.modal-open, .modal-open .navbar-fixed-top {
+  margin-right: 0 !important;
+}
+
 .ui-datepicker { 
 	font-size: 7pt !important; 
 }
